찜하기 버튼작업중

--- a/src/main/webapp/resources/bootstrap-5/html/css/custom.css
+++ b/src/main/webapp/resources/bootstrap-5/html/css/custom.css
@@ -16,3 +16,17 @@ text-align: center;
 	float:right;
 	
 }
+
+
+.btn-outline-danger1 {
+  color: #fff;
+  background-color: #dc3545;
+  border-color: #dc3545;
+}
+
+.btn-outline-danger1:hover {
+  color: #dc3545;
+  background-color: #fff;
+  border-color: #dc3545;
+  
+}
