campview 댓글 삭제완 (버튼 위치...)

--- a/src/main/webapp/resources/bootstrap-5/html/css/custom.css
+++ b/src/main/webapp/resources/bootstrap-5/html/css/custom.css
@@ -16,7 +16,10 @@ text-align: center;
 	float:right;
 	
 }
-
+.left-float{
+	float:left;
+	
+}
 
 .btn-outline-danger1 {
   color: #fff;
@@ -28,6 +31,9 @@ text-align: center;
   color: #dc3545;
   background-color: #fff;
   border-color: #dc3545;
-  
-  
+}
+
+.cvcmt{
+
+
 }
