모든 페이지의 메뉴바 지도검색 href를 수정사항으로 변경함

--- a/src/main/webapp/resources/bootstrap-5/html/admin/css/material-dashboard.css
+++ b/src/main/webapp/resources/bootstrap-5/html/admin/css/material-dashboard.css
@@ -22539,6 +22539,10 @@ label,
   background-image: linear-gradient(195deg, #49a3f1 0%, #1A73E8 100%);
 }
 
+.bg-gradient-admin {
+  background-image: linear-gradient(195deg, #6f42c1 0%, #6f42c1 100%);
+}
+
 .bg-gradient-warning {
   background-image: linear-gradient(195deg, #FFA726 0%, #FB8C00 100%);
 }
